apps/base/speedtest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
      - name: speedtest
        image: ghcr.io/librespeed/speedtest:latest@sha256:f4f8a26753365a7843bc3b5c73b9eefe8f63d10f21cf11492c18fc51a02f1713
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            memory: 128Mi
