apps/base/speedtest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: speedtest
spec:
  selector:
    app: speedtest
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
